# astra_block_blockchain

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.es.md  README.md  README.pt-br.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analyzer/: contract_analyzer.py
app/: logging_config.py  main.py  middleware.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin.py  contracts.py  documents.py  health.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/middleware/: error_handler.py  rate_limiter.py  request_id.py  security_headers.py
app/models/: schemas.py
app/repositories/: apikey_repository.py
app/services/: apikey_service.py  contract_service.py  indexer_service.py
auth/: keys.py
embeddings/: indexer.py
examples/: demo.py
frontend/: .dockerignore  .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: astrablock.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: ContractAnalysis.tsx  Home.tsx  MarketOptions.tsx  RagSearch.tsx
tests/: conftest.py  test_admin.py  test_analyzer.py  test_contracts.py  test_documents.py  test_health.py  test_indexer.py
